@@ -3531,7 +3531,7 @@ void OUTPUT_TTF_Select(int fsize=-1) {
     }
     int fontSize = 0;
     int winPerc = 0;
-    if (fsize==2)
+    if (fsize==3)
         winPerc = 100;
     else if (fsize>9)
         fontSize = fsize;
@@ -3592,7 +3592,7 @@ void OUTPUT_TTF_Select(int fsize=-1) {
         }
         wpBG = render_section->Get_int("ttf.wpbg");
         winPerc = render_section->Get_int("ttf.winperc");
-        if (winPerc>100||(fsize==3&&GFX_IsFullscreen())||(fsize!=1&&(control->opt_fullscreen||static_cast<Section_prop *>(control->GetSection("sdl"))->Get_bool("fullscreen")))) winPerc=100;
+        if (winPerc>100||(fsize==2&&GFX_IsFullscreen())||(fsize!=1&&fsize!=2&&(control->opt_fullscreen||static_cast<Section_prop *>(control->GetSection("sdl"))->Get_bool("fullscreen")))) winPerc=100;
         else if (winPerc<25) winPerc=25;
         if (fsize==1&&winPerc==100) winPerc=60;
         fontSize = render_section->Get_int("ttf.ptsize");
@@ -3956,7 +3956,7 @@ void GFX_SwitchFullScreen(void)
         } else {
             lastfontsize = ttf.pointsize;
             sdl.desktop.fullscreen = true;
-            OUTPUT_TTF_Select(2);
+            OUTPUT_TTF_Select(3);
             resetFontSize();
         }
         modeSwitched(sdl.desktop.fullscreen);
@@ -10128,7 +10128,7 @@ bool vid_select_glsl_shader_menu_callback(DOSBoxMenu* const menu, DOSBoxMenu::it
 
 #ifdef USE_TTF
 void ttf_reset() {
-    OUTPUT_TTF_Select(3);
+    OUTPUT_TTF_Select(2);
     resetFontSize();
 }
 
